# triton-grpc-proxy-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.toml  convert.py  docker-compose.yml  run_client.sh  rustfmt.toml
.github/workflows/: ci.yml
model_repository/embedding/: config.pbtxt
model_repository/model/: config.pbtxt
model_repository/tokenizer/: config.pbtxt
model_repository/tokenizer/1/: model.py
src/: client.rs  error.rs  main.rs  test.rs
src/configs/: mod.rs
src/constants/: mod.rs
src/endpoints/: embedding.rs  metrics.rs  mod.rs  prometheus.rs
src/models/: mod.rs
src/services/: embedding.rs  metrics.rs  mod.rs  openapi.rs  prometheus.rs
