[package]
name = "triton-grpc-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["kozistr <kozistr@gmail.com>"]
description = "Proxy server for triton gRPC server that inferences embedding model in Rust"
homepage = "https://github.com/kozistr/triton-grpc-proxy"
readme = "README.md"
repository = "https://github.com/kozistr/triton-grpc-proxy"
categories = ["proxy", "triton", "server"]
keywords = ["proxy", "triton", "grpc", "embedding-server", "restful-api"]

[dependencies]
tonic = "^0.10.1"
bytemuck = "^1.14.0"
ndarray = { version = "^0.15.6", features = ["rayon", "serde"] }
tokio = { version = "^1.32.0", features = ["macros", "rt-multi-thread"] }
actix-web = "^4.4.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
env_logger = "^0.10.0"
lazy_static = "^1.4.0"
async_once = "^0.2.6"
triton-client = { git = "https://github.com/octoml/triton-client-rs.git" }
mimalloc = { version = "^0.1", default-features = false }

[build-dependencies]

[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 4
lto = false
panic = "unwind"
debug = true
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
incremental = true
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
