[package]
name = "triton-grpc-proxy"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["kozistr <kozistr@gmail.com>"]
description = "Proxy server for triton gRPC server that inferences embedding model in Rust"
homepage = "https://github.com/kozistr/triton-grpc-proxy"
readme = "README.md"
repository = "https://github.com/kozistr/triton-grpc-proxy"
categories = ["proxy", "triton", "server"]
keywords = ["proxy", "triton", "grpc", "embedding-server", "restful-api"]

[dependencies]
tonic = "^0"
bytemuck = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
ntex = { version = "^2", features = ["tokio"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "*"
envconfig = "*"
triton-client = { git = "https://github.com/octoml/triton-client-rs.git" }
mimalloc = { version = "*", default-features = false }

[build-dependencies]

[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev]
incremental = true
opt-level = 0
codegen-units = 4
lto = false
panic = "unwind"
debug = true
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
incremental = true
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
